[gd_scene load_steps=3 format=3 uid="uid://sksy8xvdn6wj"]

[ext_resource type="Script" uid="uid://cj05t5elpfyqd" path="res://decades/1990s/Battle/DefeatScreen.gd" id="1_dq4oi"]
[ext_resource type="Texture2D" uid="uid://cxoh6jpu3fttw" path="res://assets/Derrota.png" id="2_iiptf"]

[node name="DefeatScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_dq4oi")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1724.0
offset_bottom = 970.0
texture = ExtResource("2_iiptf")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 720.0
offset_top = 520.0
offset_right = 847.0
offset_bottom = 586.0
scale = Vector2(2, 2)
alignment = 1

[node name="ButtonAgain" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Jogar de Novo"

[node name="ButtonMainMenu" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Voltar ao Menu"

[node name="ButtonLoad" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Carregar"
